--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 *.o
 *.so
 
+# Visual Studio Files #
+#######################
+*.suo
+
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
