--- a/GameJam2013/GameJam2013/GameJam2013/GameJam2013.csproj
+++ b/GameJam2013/GameJam2013/GameJam2013/GameJam2013.csproj
@@ -72,9 +72,15 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MainGame.cs" />
+    <Compile Include="Objects\Attack.cs" />
+    <Compile Include="Objects\Collideable.cs" />
+    <Compile Include="Objects\Map.cs" />
+    <Compile Include="Objects\Player.cs" />
+    <Compile Include="Objects\RockWall.cs" />
+    <Compile Include="Objects\Wall.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Game1.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
