--- a/GameJam2013/GameJam2013/GameJam2013/GameJam2013.csproj
+++ b/GameJam2013/GameJam2013/GameJam2013/GameJam2013.csproj
@@ -78,7 +78,12 @@
     <Compile Include="Objects\Map.cs" />
     <Compile Include="Objects\Player.cs" />
     <Compile Include="Objects\RockWall.cs" />
+    <Compile Include="Objects\Stimulant.cs" />
     <Compile Include="Objects\Wall.cs" />
+    <Compile Include="Particle\Particle.cs" />
+    <Compile Include="Particle\ParticleEmitter.cs" />
+    <Compile Include="Particle\ParticleHelpers.cs" />
+    <Compile Include="Particle\ParticleSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
@@ -89,6 +94,10 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\..\Desktop\CSCI356\Examples\LectureExamples\Particles2DPipeline_4_0\ParticleSettings\ParticleSettings %28Windows%29.csproj">
+      <Project>{F32F90F2-3829-4E99-9884-FC5CC26D1412}</Project>
+      <Name>ParticleSettings %28Windows%29</Name>
+    </ProjectReference>
     <ProjectReference Include="..\FredLib\FredLib\FredLib.csproj">
       <Project>{DF2A7636-693F-46BA-A223-7B047634DA65}</Project>
       <Name>FredLib</Name>
