--- a/GameJam2013/GameJam2013/GameJam2013/GameJam2013.csproj
+++ b/GameJam2013/GameJam2013/GameJam2013/GameJam2013.csproj
@@ -80,10 +80,10 @@
     <Compile Include="Objects\RockWall.cs" />
     <Compile Include="Objects\Stimulant.cs" />
     <Compile Include="Objects\Wall.cs" />
-    <Compile Include="Particle\Particle.cs" />
-    <Compile Include="Particle\ParticleEmitter.cs" />
-    <Compile Include="Particle\ParticleHelpers.cs" />
-    <Compile Include="Particle\ParticleSystem.cs" />
+    <Compile Include="Particles\Particle.cs" />
+    <Compile Include="Particles\ParticleEmitter.cs" />
+    <Compile Include="Particles\ParticleHelpers.cs" />
+    <Compile Include="Particles\ParticleSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
@@ -134,6 +134,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
